# dbbackend

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  JOB_DETAIL_PLAN.md  MARKET_DASHBOARD_PLAN.md  Makefile  README.md  TASK_BUILDER_TEST_PLAN.md  TASK_DATA_MODEL.md  TASK_TEST_PLAN.md  TESTING_GUIDE.md  chatbot.http  pyproject.toml  requirements.txt  skills-lock.json  test.py
app/: .env.example  main.py
app/alembic/: env.py
app/alembic/versions/: 5c5ad1ae4890_merge_task_deadline_updated_at_with_.py  64f66ba5c04d_add_task_updated_at.py  6747dc8a671d_add_task_deadline.py  7c8e91f24a10_add_task_skills_and_refreshable_career_recommendations.py  7f146e36e9fd_add_task_updated_at_deadline.py  ba680aca4f7b_baseline_schema.py  bd032da8d4b7_add_task_inputs_storage_url.py  d156edf3f99f_sync_task_schema_with_complexity_merge.py  e3b7c95229e3_add_task_skills_drop_student_skill.py  e3f9a1c2b5d7_add_enterprise_reviews.py
app/core/: config.py  database.py  exceptions.py  security.py
app/domains/chatbot/: providers.py  router.py  schemas.py  service.py
app/domains/eportfolio/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/evidence/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/guidance/: anti_bias.py  models.py  repository.py  router.py  schemas.py  seed_data.py  service.py
app/domains/market/: models.py  repository.py  router.py  schemas.py  seed_data.py  service.py
app/domains/student/: background.py  constants.py  models.py  repository.py  router.py  schemas.py  seed_data.py  service.py
app/domains/task/: models.py  repository.py  router.py  schemas.py  (+3 more)
app/static/: worklab-access-hub.html
docs/: ARCHITECTURE.md  CODE_REVIEW_ASSIGNMENTS.md  DATA_MODEL.md  MARKET_DATA_MODEL.md  TESTING.md  requirements.md
(+19 files in other folders)
