[project]
name = "career-guidance-backend"
version = "0.1.0"
description = "Career guidance system: job market signal analysis, student profiling, and personalized recommendation API."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "passlib[bcrypt]>=1.7",
    "requests>=2.34.2",
    "litellm>=1.92.0",
    "google-genai>=2.12.1",
    "google-cloud-storage>=2.18",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "alembic>=1.13",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# app/ has no package prefix on its own imports (`from core.database import
# ...`, `from domains.market... import ...`), so it must be on sys.path for
# test modules to import them — independent of whatever directory pytest is
# invoked from. Path is resolved relative to this file's directory (rootdir).
pythonpath = ["app"]
